--- a/src/style.css
+++ b/src/style.css
@@ -37,7 +37,63 @@ body {
     height:0.5%;
     bordeR: 1px solid;
     border-radius: 50%;
-    background-color: black;
+    background-color: white;
     /* box-shadow: 1px 1px white; */
   }
   
+  .playbar {
+    display: flex;
+    align-items: center;
+    background-color: #f2f2f2;
+    padding: 10px;
+    border-radius: 10px;
+    width: 400px;
+    margin-left: 19px;
+}
+
+.play-btn {
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.time {
+    margin: 0 10px;
+    font-size: 14px;
+    color: #555;
+}
+
+.slider {
+    width: 100%;
+    height: 4px;
+    background: #ccc;
+    outline: none;
+    opacity: 0.7;
+    transition: opacity 0.2s;
+}
+
+.slider:hover {
+    opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 15px;
+    height: 15px;
+    background: #555;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    width: 15px;
+    height: 15px;
+    background: #555;
+    border-radius: 50%;
+    cursor: pointer;
+}
